# emergency_call_engine

./: Dockerfile  dev.py  main.py  pyproject.toml  run.py
app/: main.py
app/db/: nosqldb.py
app/rmq/: rmq.py
app/services/: limiter.py
